# sarlab-tdc

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cudatypes/: CMakeLists.txt
cudatypes/include/: cudastream.h  gpuarray.h  gpupitchedarray.h  pagelockedhost.h
py-sarlabtdc/: setup.py
py-sarlabtdc/include/: tdcprocessor_wrapper.h
py-sarlabtdc/sarlabtdc/: __init__.py
py-sarlabtdc/src/: interface.cpp  tdcprocessor_wrapper.cpp
py-tdc/: CMakeLists.txt  setup.py  test.cpp
sarlab-tdc/: CMakeLists.txt
sarlab-tdc/include/: argparser.h
sarlab-tdc/src/: argparser.cpp  main.cpp
sarlabtdc/: CMakeLists.txt  setup.cfg  setup.py  vcpkg.json
sarlabtdc/include/: tdcprocessor_wrapper.h
sarlabtdc/src/: interface.cpp  tdcprocessor_wrapper.cpp
tdc-lib/: CMakeLists.txt
tdc-lib/include/: cubscratch.h  cudastream.h  gpuarray.h  gpumath.h  gpupitchedarray.h  npp_utils.h  tdc_processor.h  tdckernels.cuh  tdckernels.h  tdcprocessor.h  tuning.h  windowing.h
tdc-lib/src/: cubscratch.cu  npp_utils.cpp  tdc_processor.cpp  tdckernels.cu  tdcprocessor.cpp
tdctest/: CMakeLists.txt  mathtest.cpp  tdctest.cpp
