[metadata]
name = sarlabtdc
version = 1.0.0
description = Time-domain correlation SAR processor for high bandwidth mmWave radars.
license = GPL v3
author = Wyatt Gronnemose
author_email = wyatt_gronnemose@sfu.ca

[options]
packages = find:
python_requires >= 3.10
install_requires = 
    numpy
    scipy
    matplotlib
